--- a/src/components/Logo/style.css
+++ b/src/components/Logo/style.css
@@ -1,9 +1,9 @@
 .logo {
   display: flex;
-  font-size: 1.5rem;
+  align-items: center;
 }
 
 .logo-img{
     margin-right: 0.5rem;
-
+    width: 3.5rem;
 }
